
0.40 to be released
    * Keep any preset value in @Chrome::DevToolsProtocol::Transport::loops
    * Keep any preset value in @Chrome::DevToolsProtocol::Transport::Pipe::loops
    * Make the test suite leaner by only launching test servers if we're
      actually going to run tests
    * Fix a crash with the Mojo backend when Chrome crashed/was unavailable

0.39 2019-11-08
    * Skip tests on unsupported Chrome versions
    * Switch default (prerequisite) backend to IO::Async
    * We now have a dynamic configuration again, because on Windows we need
      Win32::File::VersionInfo to determine the Chrome version without
      launching it.

0.38 2019-11-01
    * Added wait_file option to wait for a file to disappear so we know that
      this Chrome instance has quit.
    * Added ->close() method to disconnect the object. This is just parts of
      DESTROY().
    * The backend selection was improved. We now select the backend that is
      already loaded.
    * Some memory leaks/circular references eliminated

0.37 2019-09-30
    * WWW::Mechanize::Chrome now asks Chrome for the URL. This allows the test
      suite (and your programs) to run in parallel, each using their own
      Chrome instance without them treading onto each others toes.
    * WWW::Mechanize::Chrome can now talk to Chrome v72+ using pipes (fd 3 and
      fd 4) on unixish OSes. In theory, using fd 3 and fd 4 is possible on
      Windows as well but not yet implemented. Doing this allows you to
      avoid sockets in the local communication.

      Use

          pipe => 1

      in the constructor to switch to using pipes.

    * API change: Use ->getTargets->get() instead of ->list_tabs()
      ->list_tabs() will be unsupported in the future.

    * The following three Chrome versions are now unsupported, as they do
      not allow reading the websocket URL from Chrome:

        * Chrome/59.0.3071.115
        * HeadlessChrome/60.0.3110.0
        * HeadlessChrome/61.0.3141.0
