@@ -72,6 +72,7 @@ t/50-mech-new.t
 t/50-mech-redirect.t
 t/50-mech-start-url.t
 t/50-mech-status.t
+t/50-mech-text.t
 t/50-popup.t
 t/51-click-intrapage.t
 t/51-mech-form-with-fields.t
